Logout route added
