# app/controllers/auth.controller.js
@@ -87,4 +87,14 @@ const login = (req, res) => {
     });
 };
 
-export { login, signup };
+const logout = (req, res) => {
+  res
+    .clearCookie("access_token", {
+      sameSite: "none",
+      secure: true,
+    })
+    .status(200)
+    .json("User has been logged out");
+};
+
+export { login, signup, logout };
