# app/routes/auth.routes.js
@@ -6,4 +6,6 @@ router.post("/signup", controller.signup);
 
 router.post("/login", controller.login);
 
+router.post("/logout", controller.logout);
+
 export default router;
